Pass the required --add-opens flags
Signed-off-by: teodordelibasic-db <teodor.delibasic@databricks.com>